--- a/DrvariumPIN/appsettings.json
+++ b/DrvariumPIN/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DrvariumPIN-33131207-65B8-44E5-9D82-1C9FC462AB2C;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DrvariumPIN-33131207-65B8-44E5-9D82-1C9FC462AB2C;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "DrvoContext": "Server=(localdb)\\mssqllocaldb;Database=DrvoContext-0fcdb9bf-e47a-40bc-abc3-a0b99b4d304a;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DrvosContext": "Server=(localdb)\\mssqllocaldb;Database=DrvosContext-7831d106-8195-4a0a-89e8-c3231eb393f1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
